Bug 671291 - </iframe> and </html> overlap in the Inspect window; r=dao
UltraBlame original commit: bf900e375add310511e301f9b86c061b13968f5a

--- a/browser/themes/winstripe/browser/inspector.css
+++ b/browser/themes/winstripe/browser/inspector.css
@@ -201,6 +201,8 @@ code {
 
 .docType {
   position: absolute;
+  
+  
   top: -16px;
   font-family: Menlo, Andale Mono, monospace;
   padding-left: 8px;
@@ -210,7 +212,9 @@ code {
 }
 
 .htmlNodeBox {
-  top: 16px;
+  
+  
+  margin-top: 16px;
 }
 
 .nodeWhiteSpace {
